ui: Move /alerts to API v2
